--- a/app/src/main/res/layout/activity_abuse_selection.xml
+++ b/app/src/main/res/layout/activity_abuse_selection.xml
@@ -83,7 +83,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="wrap_content"
         android:id="@+id/tags_lay"
         android:layout_below="@+id/rating_lay"
         >
@@ -110,7 +110,7 @@
         android:paddingBottom="10dp"
         android:paddingLeft="25dp"
         android:paddingTop="10dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/round_rect_primary"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
         />
