--- a/app/src/main/res/layout/view_holder_exoplayer_basic.xml
+++ b/app/src/main/res/layout/view_holder_exoplayer_basic.xml
@@ -117,19 +117,22 @@
                     <de.hdodenhof.circleimageview.CircleImageView
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/profile_image"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:src="@mipmap/sampleimage"
                         app:civ_border_width="2dp"
+                        android:padding="5dp"
                         app:civ_border_color="@color/colorPrimary"/>
 
                     <ImageView
                         android:id="@+id/iv_addfriend"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:padding="5dp"
                         android:src="@mipmap/add_friendicon"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginTop="-15dp"
+                        android:layout_marginTop="-30dp"
+                        android:layout_marginLeft="-5dp"
                         />
                 </LinearLayout>
             </LinearLayout>
@@ -364,7 +367,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_gravity="center_vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/tv_hashtag2"
