--- a/app/src/main/res/layout/activity_making_video.xml
+++ b/app/src/main/res/layout/activity_making_video.xml
@@ -164,6 +164,7 @@
                 android:text="Upload"
                 android:textSize="12sp"
                 android:textColor="#54588a"
+                android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:layout_gravity="center"
                 android:gravity="center"/>
