--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -176,6 +176,7 @@
             android:layout_height="wrap_content"
             android:text="0%"
             android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
             android:layout_centerInParent="true"/>
     </RelativeLayout>
 
