--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -50,12 +50,14 @@
             android:src="@mipmap/old_password"/>
 
         <EditText
+            android:id="@+id/et_oldpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Old password"
             android:layout_margin="10dp"
             android:layout_gravity="center"
             android:inputType="text"
+            android:maxLength="12"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
@@ -86,12 +88,14 @@
             android:src="@mipmap/new_password"/>
 
         <EditText
+            android:id="@+id/et_newpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="New password"
             android:layout_margin="10dp"
             android:layout_gravity="center"
             android:inputType="text"
+            android:maxLength="12"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
@@ -122,12 +126,14 @@
             android:src="@mipmap/confirm_password"/>
 
         <EditText
+            android:id="@+id/et_confirmpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Confirm password"
             android:layout_margin="10dp"
             android:layout_gravity="center"
             android:inputType="text"
+            android:maxLength="12"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
@@ -142,6 +148,13 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
     </View>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="*Minimum 6 characters with atleast one special character,one numerical and one uppercase and lowercase letter."
+        android:layout_margin="10dp"
+        android:layout_gravity="center"/>
 
     <RelativeLayout
         android:id="@+id/layout_change"
