--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,13 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.SearchActivity">
+    tools:context=".activities.SearchActivity"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <RelativeLayout
         android:id="@+id/layout_titlebar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <ImageView
             android:id="@+id/iv_backbtn"
@@ -43,7 +47,9 @@
             android:layout_toRightOf="@+id/iv_backbtn"
             android:layout_margin="5dp"
             android:background="#650cc6"
-            android:layout_centerVertical="true">
+            android:layout_centerVertical="true"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
             <ImageView
                 android:id="@+id/iv_search"
@@ -62,6 +68,8 @@
                 android:layout_centerVertical="true"
                 android:textColor="@android:color/white"
                 android:layout_margin="10dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 />
         </RelativeLayout>
 
