--- a/app/src/main/res/drawable/border_lightblack.xml
+++ b/app/src/main/res/drawable/border_lightblack.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <stroke android:color="@color/colorPrimary"
+    <stroke android:color="#dad9db"
         android:width="1dp"></stroke>
     <corners android:radius="5dp"></corners>
 </shape>
