--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -155,11 +155,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#1A000000"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:visibility="gone">
             </View>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/layout_password"
+                >
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                >
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -203,15 +211,20 @@
                         android:src="@mipmap/right_arrow_black"/>
                 </RelativeLayout>
             </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#1A000000"
-                android:layout_marginTop="5dp">
-            </View>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#1A000000"
+                    android:layout_marginTop="5dp"
+                    android:layout_alignParentBottom="true"
+                    android:visibility="visible">
+                </View>
+            </RelativeLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:id="@+id/iv_biodata"
                     android:layout_width="20dp"
@@ -239,10 +252,11 @@
                     android:layout_gravity="center"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
-                    android:inputType="text"
+                    android:inputType="textMultiLine"
                     android:focusableInTouchMode="true"
                     android:focusable="true"
-                    android:maxLength="150"
+                    android:maxLength="100"
+                    android:maxLines="3"
                     android:background="@android:color/transparent"
                     android:textAppearance="?android:attr/textAppearanceSmall"/>
 
