--- a/app/src/main/res/layout/fragment_search_hashtags_fragment.xml
+++ b/app/src/main/res/layout/fragment_search_hashtags_fragment.xml
@@ -6,10 +6,15 @@
     tools:context=".fragments.SearchHashtags_fragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hashtags"
-        android:layout_centerInParent="true"/>
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+       <android.support.v7.widget.RecyclerView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:id="@+id/rv_hashtags">
+
+       </android.support.v7.widget.RecyclerView>
+   </RelativeLayout>
 
 </RelativeLayout>
