--- a/app/src/main/res/layout/fragment_discover_fragment.xml
+++ b/app/src/main/res/layout/fragment_discover_fragment.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/rv_trendinghashtags"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
                 android:layout_margin="4dp"
