--- a/app/src/main/res/layout/fragment_search_sound_fragment.xml
+++ b/app/src/main/res/layout/fragment_search_sound_fragment.xml
@@ -8,13 +8,20 @@
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rv_sounds">
 
         </android.support.v7.widget.RecyclerView>
+        <TextView
+            android:id="@+id/tv_nodata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No data found"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_centerInParent="true"/>
     </RelativeLayout>
 
 </RelativeLayout>
