--- a/app/src/main/res/layout/fragment_me_.xml
+++ b/app/src/main/res/layout/fragment_me_.xml
@@ -231,6 +231,26 @@
                                 android:layout_gravity="center_vertical"
                                 android:textColor="@color/textcolorblackalpha"/>
                         </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/layout_drafts"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginTop="15dp">
+                            <ImageView
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:src="@mipmap/videos"
+                                android:layout_gravity="center_vertical"/>
+                            <TextView
+                                android:id="@+id/tv_drafts"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="0 Drafts"
+                                android:layout_marginLeft="10dp"
+                                android:layout_gravity="center_vertical"
+                                android:textColor="@color/textcolorblackalpha"/>
+                        </LinearLayout>
 
                     </LinearLayout>
 
